--- a/src/adapters/http/views/partials/reserved.hbs
+++ b/src/adapters/http/views/partials/reserved.hbs
@@ -1,3 +1,3 @@
 {{#if card.isReserved}}
-<span class="text-xs text-white bg-purple-500 px-1 mx-1">Reserved List</span>
+<span class="text-xs text-white bg-purple-500 px-1 mx-1">Reserved</span>
 {{/if}}
