--- a/test/http/views/partials/cardsOwned.hbs
+++ b/test/http/views/partials/cardsOwned.hbs
@@ -1,4 +1,5 @@
-<form class="quantity-form inline-flex items-stretch border-none rounded overflow-hidden mt-2" data-item-id="{{card.id}}">
+<form class="quantity-form inline-flex items-stretch border-none rounded overflow-hidden mt-2 h-8"
+    data-item-id="{{card.id}}">
 
     <button type="button"
         class="increment-quantity flex items-center justify-center px-3 bg-teal-300 
