--- a/src/adapters/http/views/inventory.hbs
+++ b/src/adapters/http/views/inventory.hbs
@@ -1,9 +1,7 @@
-<section id="user-inventory" class="section-container">
-    <h3 class="page-title">{{this.username}}'s Inventory</h3>
-    <section>
-        <div>
-            <p>Value: ${{#if this.value}}{{this.value}}{{else}}0.00{{/if}}</p>
-        </div>
+<section id="user-inventory" class="section-container border-l border-r">
+    <section class="text-center bg-teal-100 mb-4 -mx-6 -mt-6">
+        <h3 class="page-title">{{this.username}}'s Inventory</h3>
+        <p>Value: ${{#if this.value}}{{this.value}}{{else}}0.00{{/if}}</p>
     </section>
 
     <table id="user-inventory-cards" class="table-container w-full">
