--- a/src/adapters/http/views/partials/cardsOwned.hbs
+++ b/src/adapters/http/views/partials/cardsOwned.hbs
@@ -1,4 +1,4 @@
-<form class="quantity-form inline-flex items-stretch border-none rounded overflow-hidden mt-2 h-8"
+<form class="quantity-form inline-flex items-stretch border-none rounded overflow-hidden m-1 h-8"
     data-item-id="{{card.id}}">
 
     <button type="button"
