--- a/src/adapters/http/styles/tailwind.css
+++ b/src/adapters/http/styles/tailwind.css
@@ -51,6 +51,10 @@
     @apply block font-medium text-teal-500;
 }
 
+.inventory-controller-button {
+    @apply flex items-center justify-center px-3 bg-teal-300 text-white hover:bg-teal-400 active:bg-teal-300;
+}
+
 .link {
     @apply text-purple-600 hover:underline;
 }
@@ -64,7 +68,7 @@
 }
 
 .navbar-link {
-    @apply text-white hover:text-teal-100 px-3 py-2 rounded-md text-sm font-medium;
+    @apply text-white hover:text-teal-100 px-3 py-2 rounded-md font-medium;
 }
 
 .navbar-link-mobile {
@@ -76,7 +80,11 @@
 }
 
 .page-subtitle {
-    @apply text-teal-700 text-lg mb-6;
+    @apply text-teal-700 text-lg md:text-base lg:text-xl mb-6;
+}
+
+.quantity-form {
+    @apply text-sm md:text-base lg:text-lg;
 }
 
 .response-message {
@@ -104,7 +112,7 @@
 }
 
 .section-title {
-    @apply text-lg font-semibold mb-2;
+    @apply text-lg md:text-base lg:text-xl font-semibold mb-2;
 }
 
 .settings-container {
