--- a/src/adapters/http/views/partials/cardsOwned.hbs
+++ b/src/adapters/http/views/partials/cardsOwned.hbs
@@ -5,8 +5,10 @@
         class="increment-quantity inventory-controller-button hover:text-purple-400 active:text-purple-600">+</button>
 
     <input type="number" name="quantity-owned" class="quantity-owned text-center 
-        border-none bg-teal-300 text-white text-sm sm:text-base md:text-base lg:text-lg xs:w-12 sm:w-12 md:w-12 
-        lg:w-12 xl:w-16 focus:outline-none focus:ring-0" value="{{#if card.quantity}}{{card.quantity}}{{else}}0{{/if}}"
+        border-none bg-teal-300 text-white px-0
+        text-sm sm:text-xs md:text-base lg:text-base
+        w-12 sm:w-12 md:w-12 lg:w-12 xl:w-16
+        focus:outline-none focus:ring-0" value="{{#if card.quantity}}{{card.quantity}}{{else}}0{{/if}}"
         data-id="{{card.id}}" />
 
     <button type="button"
