--- a/test/http/views/layouts/main.hbs
+++ b/test/http/views/layouts/main.hbs
@@ -15,7 +15,7 @@
         {{>navbar}}
         {{>breadcrumbs}}
     </header>
-    <main>
+    <main class="text-sm sm:text-base md:text-lg lg:test-xl">
         {{{body}}}
     </main>
     <footer>
