--- a/src/adapters/http/public/css/tailwind.css
+++ b/src/adapters/http/public/css/tailwind.css
@@ -1822,6 +1822,15 @@ select {
   position: relative;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1856,10 +1865,6 @@ select {
 
 .mr-2 {
   margin-right: 0.5rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .mt-4 {
@@ -1914,6 +1919,10 @@ select {
   height: 1.5rem;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1922,8 +1931,8 @@ select {
   width: 50%;
 }
 
-.w-16 {
-  width: 4rem;
+.w-12 {
+  width: 3rem;
 }
 
 .w-6 {
@@ -2002,6 +2011,14 @@ select {
   border-radius: 0.5rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -2014,6 +2031,11 @@ select {
   border-style: none;
 }
 
+.border-purple-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(217 186 237 / var(--tw-border-opacity, 1));
+}
+
 .border-red-200 {
   --tw-border-opacity: 1;
   border-color: rgb(254 202 202 / var(--tw-border-opacity, 1));
@@ -2024,9 +2046,34 @@ select {
   border-color: rgb(252 165 165 / var(--tw-border-opacity, 1));
 }
 
+.border-teal-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 246 241 / var(--tw-border-opacity, 1));
+}
+
+.border-teal-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(110 218 209 / var(--tw-border-opacity, 1));
+}
+
+.bg-purple-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 102 207 / var(--tw-bg-opacity, 1));
+}
+
 .bg-purple-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(140 70 179 / var(--tw-bg-opacity, 1));
+}
+
+.bg-teal-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 246 241 / var(--tw-bg-opacity, 1));
+}
+
+.bg-teal-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 236 227 / var(--tw-bg-opacity, 1));
 }
 
 .bg-teal-300 {
@@ -2043,9 +2090,14 @@ select {
   padding: 1rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .px-4 {
@@ -2100,6 +2152,11 @@ select {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
@@ -2246,21 +2303,19 @@ select {
   --tw-ring-color: rgb(158 159 255 / var(--tw-ring-opacity, 1));
 }
 
-.card-image {
-  width: 100%;
-  border-radius: 1.5rem;
+.card-img-link {
+  position: absolute;
+  z-index: 50;
+  display: none;
 }
 
-@media (min-width: 640px) {
-  .card-image {
-    border-radius: 2.0rem;
-  }
+.card-img-preview {
+  height: auto;
+  width: 16rem;
 }
 
-@media (min-width: 768px) {
-  .card-image {
-    border-radius: 0.66rem;
-  }
+.cards-owned-td {
+  width: 0px;
 }
 
 .create-user-container {
@@ -2305,6 +2360,28 @@ select {
   color: rgb(40 173 168 / var(--tw-text-opacity, 1));
 }
 
+.inventory-controller-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  --tw-bg-opacity: 1;
+  background-color: rgb(110 218 209 / var(--tw-bg-opacity, 1));
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.inventory-controller-button:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 193 186 / var(--tw-bg-opacity, 1));
+}
+
+.inventory-controller-button:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(110 218 209 / var(--tw-bg-opacity, 1));
+}
+
 .link {
   --tw-text-opacity: 1;
   color: rgb(140 70 179 / var(--tw-text-opacity, 1));
@@ -2340,8 +2417,6 @@ select {
   padding-right: 0.75rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
   font-weight: 500;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
@@ -2388,6 +2463,39 @@ select {
   color: rgb(26 107 106 / var(--tw-text-opacity, 1));
 }
 
+@media (min-width: 768px) {
+  .page-subtitle {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .page-subtitle {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+.quantity-form {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+@media (min-width: 768px) {
+  .quantity-form {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .quantity-form {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
 .response-message {
   position: fixed;
   top: 1rem;
@@ -2420,7 +2528,7 @@ select {
   margin: 1.5rem;
   border-bottom-width: 1px;
   --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
+  border-color: rgb(209 246 241 / var(--tw-border-opacity, 1));
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
   padding: 1.5rem;
@@ -2438,6 +2546,20 @@ select {
   font-size: 1.125rem;
   line-height: 1.75rem;
   font-weight: 600;
+}
+
+@media (min-width: 768px) {
+  .section-title {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .section-title {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 .settings-container {
@@ -2470,6 +2592,7 @@ select {
   min-width: 100%;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  text-align: justify;
 }
 
 .table-link {
@@ -3995,9 +4118,9 @@ select {
   }
 }
 
-.hover\:bg-teal-400:hover {
+.even\:bg-teal-100:nth-child(even) {
   --tw-bg-opacity: 1;
-  background-color: rgb(64 193 186 / var(--tw-bg-opacity, 1));
+  background-color: rgb(209 246 241 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-gray-800:hover {
@@ -4039,11 +4162,6 @@ select {
 
 .focus\:ring-inset:focus {
   --tw-ring-inset: inset;
-}
-
-.active\:bg-teal-300:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(110 218 209 / var(--tw-bg-opacity, 1));
 }
 
 .active\:text-purple-600:active {
@@ -4190,13 +4308,35 @@ select {
 }
 
 @media (min-width: 640px) {
+  .sm\:m-0 {
+    margin: 0px;
+  }
+
+  .sm\:w-12 {
+    width: 3rem;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .sm\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
 }
 
 @media (min-width: 768px) {
+  .md\:m-4 {
+    margin: 1rem;
+  }
+
   .md\:mb-0 {
     margin-bottom: 0px;
   }
@@ -4217,6 +4357,10 @@ select {
     width: 33.333333%;
   }
 
+  .md\:w-12 {
+    width: 3rem;
+  }
+
   .md\:w-2\/3 {
     width: 66.666667%;
   }
@@ -4228,11 +4372,36 @@ select {
   .md\:pl-6 {
     padding-left: 1.5rem;
   }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:w-12 {
+    width: 3rem;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:w-16 {
+    width: 4rem;
   }
 }
