--- a/test/http/views/inventory.hbs
+++ b/test/http/views/inventory.hbs
@@ -1,37 +1,40 @@
-<div id="user-inventory">
-    <h3 id="user-inventory-heading">{{this.username}}'s Inventory</h3>
-    <section id="user-inventory-metadata">
-        <div id="user-inventory-value" class="user-inventory-metadata-item">
-            <p class="user-inventory-metadata-heading">Value</p>
-            <p class="user-inventory-metadata-data">{{this.value}}</p>
-        </div>
+<section class="border border-teal-100 sm:m-0 md:m-4">
+    <section class="text-center bg-teal-100 mb-4">
+        <h3 class="page-title">{{this.username}}'s Inventory</h3>
+        <p>Value: ${{#if this.value}}{{this.value}}{{else}}0.00{{/if}}</p>
     </section>
 
-    <table id="user-inventory-cards">
+    <table class="table-container w-full">
         <thead>
-            <tr>
-                <th>Owned</th>
-                <th>Name</th>
-                <th>Set</th>
-                <th>Price</th>
+            {{!-- TODO: update colors? --}}
+            <tr class="bg-teal-200">
+                <th class="border-b border-purple-300">Owned</th>
+                <th class="border-b border-purple-300">Name</th>
+                <th class="border-b border-purple-300">Set</th>
+                <th class="border-b border-purple-300">Price</th>
             </tr>
         </thead>
         <tbody>
             {{#each cards}}
-            <tr>
-                <td>{{>cardsOwned card=this}}</td>
-                <td>
+            <tr class="bg-white even:bg-teal-100 border-b border-teal-300">
+                <td class="cards-owned-td">{{>cardsOwned card=this}}</td>
+                <td class="inventory-item" data-img-src="{{this.imgSrc}}">
                     <a href="{{this.url}}">{{this.name}}</a>
-                    <img src="{{this.imgSrc}}" alt="{{this.name}}" />
+                    {{>reserved card=this}}
+                    <a href="{{this.url}}" class="card-img-link">
+                        <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
+                    </a>
                 </td>
                 <td>
-                    <i class="ss ss-{{this.setCode}} ss-fw"></i>
-                    <a href="/sets/{{this.setCode}}">{{this.setCode}}</a>
+                    <a href="/sets/{{this.setCode}}">
+                        <i class="ss ss-{{this.setCode}} ss-{{toLowerCase this.rarity}} ss-fw"></i>{{toUpperCase
+                        this.setCode}}
+                    </a>
                 </td>
-                <td>{{#if this.price}}{{this.price}}{{else}}0{{/if}}</td>
+                <td>${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
             </tr>
             {{/each}}
         </tbody>
     </table>
-</div>
+</section>
 <script src="/public/js/updateInventory.js" defer></script>
