--- a/test/http/views/layouts/main.hbs
+++ b/test/http/views/layouts/main.hbs
@@ -8,6 +8,7 @@
     <link href="//cdn.jsdelivr.net/npm/keyrune@latest/css/keyrune.css" rel="stylesheet" type="text/css" />
     <link href="/public/css/tailwind.css" rel="stylesheet" type="text/css" />
     <link href="/public/css/app.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" >
 </head>
 
 <body class="bg-white items-center justify-center min-h-screen">
