--- a/test/http/views/inventory.hbs
+++ b/test/http/views/inventory.hbs
@@ -18,7 +18,7 @@
             {{#each cards}}
             <tr class="bg-white even:bg-teal-100 border-b border-teal-300">
                 <td class="cards-owned-td">{{>cardsOwned card=this}}</td>
-                <td class="inventory-item" data-img-src="{{this.imgSrc}}">
+                <td class="inventory-item" data-id="{{this.id}}" data-img-src="{{this.imgSrc}}">
                     <a href="{{this.url}}">{{this.name}}</a>
                     {{>reserved card=this}}
                     <a href="{{this.url}}" class="card-img-link">
