--- a/test/http/views/partials/deleteInventoryEntry.hbs
+++ b/test/http/views/partials/deleteInventoryEntry.hbs
@@ -1,6 +1,7 @@
-<form action="/inventory" method="delete">
-    <input type="hidden" name="cardId" value="{{this.id}}" />
-    <button type="submit" class="delete-inventory-button">
+{{!-- TODO: fix to be async --}}
+<form class="delete-inventory-form" data-item-id="{{card.id}}">
+    <input type="hidden" name="card-id" value="{{card.id}}" />
+    <button type="button" class="delete-inventory-button">
         <i class="fas fa-trash-alt"></i>
     </button>
 </form>
