--- a/src/adapters/http/public/css/tailwind.css
+++ b/src/adapters/http/public/css/tailwind.css
@@ -1822,6 +1822,18 @@ select {
   position: relative;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
 .m-1 {
   margin: 0.25rem;
 }
@@ -1923,6 +1935,10 @@ select {
   height: 2rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1941,6 +1957,10 @@ select {
 
 .w-full {
   width: 100%;
+}
+
+.min-w-full {
+  min-width: 100%;
 }
 
 .max-w-7xl {
@@ -2056,6 +2076,11 @@ select {
   border-color: rgb(110 218 209 / var(--tw-border-opacity, 1));
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+}
+
 .bg-purple-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(168 102 207 / var(--tw-bg-opacity, 1));
@@ -2079,6 +2104,11 @@ select {
 .bg-teal-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(110 218 209 / var(--tw-bg-opacity, 1));
+}
+
+.bg-teal-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 173 168 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white {
@@ -2173,6 +2203,16 @@ select {
 
 .italic {
   font-style: italic;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(113 88 252 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-600 {
@@ -4157,6 +4197,10 @@ select {
 .hover\:text-teal-600:hover {
   --tw-text-opacity: 1;
   color: rgb(28 133 132 / var(--tw-text-opacity, 1));
+}
+
+.hover\:underline:hover {
+  text-decoration-line: underline;
 }
 
 .focus\:outline-none:focus {
