--- a/src/adapters/http/public/css/tailwind.css
+++ b/src/adapters/http/public/css/tailwind.css
@@ -1907,10 +1907,6 @@ select {
   display: table;
 }
 
-.table-cell {
-  display: table-cell;
-}
-
 .table-row {
   display: table-row;
 }
@@ -2035,10 +2031,6 @@ select {
   border-width: 1px;
 }
 
-.border-b {
-  border-bottom-width: 1px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -2049,11 +2041,6 @@ select {
 
 .border-none {
   border-style: none;
-}
-
-.border-purple-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(217 186 237 / var(--tw-border-opacity, 1));
 }
 
 .border-red-200 {
@@ -2069,11 +2056,6 @@ select {
 .border-teal-100 {
   --tw-border-opacity: 1;
   border-color: rgb(209 246 241 / var(--tw-border-opacity, 1));
-}
-
-.border-teal-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(110 218 209 / var(--tw-border-opacity, 1));
 }
 
 .bg-gray-200 {
@@ -2096,11 +2078,6 @@ select {
   background-color: rgb(209 246 241 / var(--tw-bg-opacity, 1));
 }
 
-.bg-teal-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(163 236 227 / var(--tw-bg-opacity, 1));
-}
-
 .bg-teal-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(110 218 209 / var(--tw-bg-opacity, 1));
@@ -2114,10 +2091,6 @@ select {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .px-0 {
@@ -2135,12 +2108,30 @@ select {
   padding-right: 1rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
 .pl-6 {
   padding-left: 1.5rem;
 }
 
 .pl-8 {
   padding-left: 2rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .text-left {
@@ -2208,11 +2199,6 @@ select {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
-}
-
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(113 88 252 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-600 {
@@ -2556,6 +2542,7 @@ select {
   position: fixed;
   top: 1rem;
   right: 1rem;
+  cursor: pointer;
   border-radius: 0.25rem;
   padding: 1rem;
   --tw-text-opacity: 1;
@@ -2640,15 +2627,24 @@ select {
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
 }
 
-.table-cell {
-  padding: 1rem;
-}
-
 .table-container {
-  min-width: 100%;
+  width: 100%;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-  text-align: justify;
+}
+
+.table-header {
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(217 186 237 / var(--tw-border-opacity, 1));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.table-header-row {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 236 227 / var(--tw-bg-opacity, 1));
+  text-align: left;
 }
 
 .table-link {
@@ -2662,6 +2658,15 @@ select {
 
 .table-row {
   border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(110 218 209 / var(--tw-border-opacity, 1));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.table-row:nth-child(even) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 246 241 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:prose-lg:hover {
@@ -4174,11 +4179,6 @@ select {
   }
 }
 
-.even\:bg-teal-100:nth-child(even) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 246 241 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
@@ -4197,10 +4197,6 @@ select {
 .hover\:text-teal-600:hover {
   --tw-text-opacity: 1;
   color: rgb(28 133 132 / var(--tw-text-opacity, 1));
-}
-
-.hover\:underline:hover {
-  text-decoration-line: underline;
 }
 
 .focus\:outline-none:focus {
