--- a/src/adapters/http/views/partials/cardList.hbs
+++ b/src/adapters/http/views/partials/cardList.hbs
@@ -1,24 +1,24 @@
 <table class="min-w-full bg-white">
     <thead>
-        <tr class="bg-teal-200">
-            <th class="border-b border-purple-300 p-4">Card No.</th>
-            <th class="border-b border-purple-300 p-4">Name</th>
-            <th class="border-b border-purple-300 p-4">Mana Cost</th>
-            <th class="border-b border-purple-300 p-4">Rarity</th>
-            <th class="border-b border-purple-300 p-4">Price</th>
+        <tr class="table-header-row">
+            <th class="table-header pl-4">Card No.</th>
+            <th class="table-header">Name</th>
+            <th class="table-header">Mana Cost</th>
+            <th class="table-header">Rarity</th>
+            <th class="table-header pr-4">Price</th>
         </tr>
     </thead>
     <tbody>
         {{#each cards}}
-        <tr class="bg-white even:bg-teal-100 border-b border-teal-300">
-            <td class="p-4">{{this.number}}</td>
-            <td class="p-4">
-                <a href="{{this.url}}" class="text-blue-500 hover:underline">{{this.name}}</a>
+        <tr class="table-row">
+            <td class="py-2 pl-4">{{this.number}}</td>
+            <td class="py-2">
+                <a href="{{this.url}}" class="table-link">{{this.name}}</a>
                 {{>reserved card=card}}
             </td>
-            <td class="p-4">{{>manaCost}}</td>
-            <td class="p-4">{{this.rarity}}</td>
-            <td class="p-4">${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
+            <td class="py-2">{{>manaCost}}</td>
+            <td class="py-2">{{this.rarity}}</td>
+            <td class="py-2 pr-4">${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
         </tr>
         {{/each}}
     </tbody>
