--- a/test/http/views/partials/cardInfo.hbs
+++ b/test/http/views/partials/cardInfo.hbs
@@ -59,12 +59,12 @@
         <tbody>
             {{#each otherPrintings as |p|}}
             <tr class="table-row">
-                <td class="set-icon table-cell"><i class="ss ss-{{p.setCode}}"></i></td>
-                <td class="other-printing-url table-cell">
+                <td class="set-icon py-2"><i class="ss ss-{{p.setCode}}"></i></td>
+                <td class="other-printing-url py-2">
                     <a class="table-link" href="{{p.url}}">{{p.set.name}}</a>
                     <span> ({{toUpperCase p.setCode}})</span>
                 </td>
-                <td class="other-printing-price table-cell text-right">
+                <td class="other-printing-price py-2 text-right">
                     ${{#if p.price}}{{p.price}}{{else}}0.00{{/if}}
                 </td>
             </tr>
