--- a/src/adapters/http/views/partials/setInfo.hbs
+++ b/src/adapters/http/views/partials/setInfo.hbs
@@ -1,11 +1,11 @@
-<div id="set-info">
-    <h2 id="set-header">
+<section class="text-center bg-teal-100 mb-4">
+    <h3 class="page-title flex items-center justify-center space-x-2">
         <i class="ss ss-{{set.keyruneCode}} ss-2x"></i>
-        <span id="set-name">{{set.name}}</span>
-    </h2>
-    <ul id="set-metadata">
-        <li id="set-metadata-block">Block: {{set.block}}</li>
-        <li id="set-metadata-code">Code: {{set.code}}</li>
-        <li id="set-metadata-release-date">Release Date: {{set.releaseDate}}</li>
+        <span>{{set.name}}</span>
+    </h3>
+    <ul clas="mt-4 space-y-2 text-left">
+        <li class="text-gray-700">Block: {{set.block}}</li>
+        <li class="text-gray-700">Code: {{set.code}}</li>
+        <li class="text-gray-700">Release Date: {{set.releaseDate}}</li>
     </ul>
-</div>
+</section>
