--- a/src/adapters/http/views/partials/cardList.hbs
+++ b/src/adapters/http/views/partials/cardList.hbs
@@ -1,20 +1,25 @@
-<table>
+<table class="min-w-full bg-white">
     <thead>
-        <th>Card No.</th>
-        <th>Name</th>
-        <th>Mana Cost</th>
-        <th>Rarity</th>
-        <th>Price</th>
+        <tr class="table-header-row">
+            <th class="table-header pl-2">Card No.</th>
+            <th class="table-header">Name</th>
+            <th class="table-header">Mana Cost</th>
+            <th class="table-header">Rarity</th>
+            <th class="table-header pr-2">Price</th>
+        </tr>
     </thead>
     <tbody>
-    {{#each cards}}
-        <tr>
-            <td>{{this.number}}</td>
-            <td><a href="{{this.url}}">{{this.name}}</a>{{>reserved card=card}}</td>
-            <td>{{>manaCost}}</td>
-            <td>{{this.rarity}}</td>
-            <td>${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
+        {{#each cards}}
+        <tr class="table-row">
+            <td class="py-2 pl-2">{{this.number}}</td>
+            <td class="py-2">
+                <a href="{{this.url}}" class="table-link">{{this.name}}</a>
+                {{>reserved card=card}}
+            </td>
+            <td class="py-2">{{>manaCost}}</td>
+            <td class="py-2">{{this.rarity}}</td>
+            <td class="py-2 pr-2">${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
         </tr>
-    {{/each}}
+        {{/each}}
     </tbody>
 </table>
