--- a/src/adapters/http/views/partials/setCards.hbs
+++ b/src/adapters/http/views/partials/setCards.hbs
@@ -1,28 +1,28 @@
-<table id="set-cards">
+<table class="table-container">
     <thead>
-        <th># Owned</th>
-        <th>Card No.</th>
-        <th>Name</th>
-        <th>Mana Cost</th>
-        <th>Rarity</th>
-        <th>Price</th>
+        <tr class="table-header-row">
+            <th class="table-header pl-2"># Owned</th>
+            <th class="table-header">Card No.</th>
+            <th class="table-header">Name</th>
+            <th class="table-header">Mana Cost</th>
+            <th class="table-header">Rarity</th>
+            <th class="table-header pr-2">Price</th>
+        </tr>
     </thead>
     <tbody>
         {{#each set.cards}}
-        <tr class="card-set-card">
-            <td class="card-set-card-owned">
+        <tr class="table-row">
+            <td class="py-2 pl-2">
                 {{>cardsOwned card=this}}
             </td>
-            <td class="card-set-card-number">{{this.number}}</td>
-            <td class="card-set-card-name">
-                <a class="card-set-card-link" href="{{this.url}}">{{this.name}}</a>
+            <td class="py-2">{{this.number}}</td>
+            <td class="py-2">
+                <a href="{{this.url}}" class="table-link">{{this.name}}</a>
                 {{>reserved card=this}}
             </td>
-            <td class="card-set-card-mana-cost">
-                {{>manaCost card=this}}
-            </td>
-            <td class="card-set-card-rarity">{{this.rarity}}</td>
-            <td class="card-set-card-price">${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
+            <td class="py-2">{{>manaCost card=this}}</td>
+            <td class="py-2">{{this.rarity}}</td>
+            <td class="py-2 pr-2">${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
         </tr>
         {{/each}}
     </tbody>
